--- a/src/templates/cart-order.html
+++ b/src/templates/cart-order.html
@@ -24,14 +24,14 @@ wrapperClass: page-cart
 
 						<div class="form__box form__box--wide">
 							<div class="input form__input">
-								<input 
+								<input
 								type='text'
 								class="input__field"
 								placeholder="Имя">
 								<span class="input__error">*Какая-то ошибочка вышла</span>
 							</div>
 							<div class="input form__input">
-								<input 
+								<input
 								type='text'
 								class="input__field"
 								placeholder="Фамилия">
@@ -41,14 +41,14 @@ wrapperClass: page-cart
 
 						<div class="form__box form__box--wide">
 							<div class="input form__input">
-								<input 
+								<input
 								type='tel'
 								class="input__field js-phone-mask"
 								placeholder="Телефон">
 								<span class="input__error">*Какая-то ошибочка вышла</span>
 							</div>
 							<div class="input form__input">
-								<input 
+								<input
 								type='email'
 								class="input__field"
 								placeholder="E-mail"
@@ -60,31 +60,31 @@ wrapperClass: page-cart
 						<div class="form__box form__box--wide">
 							<div class="form__box">
 								<div class="input form__input">
-									<input 
+									<input
 									type='text'
 									class="input__field"
 									placeholder="Город">
 									<span class="input__error">*Какая-то ошибочка вышла</span>
 								</div>
 								<div class="input form__input">
-									<input 
+									<input
 									type='number'
 									class="input__field"
 									placeholder="Индекс">
 									<span class="input__error">*Какая-то ошибочка вышла</span>
 								</div>
 							</div>
-							
+
 							<div class="form__box">
 								<div class="input form__input">
-									<input 
+									<input
 									type='text'
 									class="input__field"
 									placeholder="Улица">
 									<span class="input__error">*Какая-то ошибочка вышла</span>
 								</div>
 								<div class="input form__input">
-									<input 
+									<input
 									type='text'
 									class="input__field"
 									placeholder="Дом/корпус">
@@ -93,14 +93,27 @@ wrapperClass: page-cart
 							</div>
 						</div>
 
-					</div>		
+					</div>
+
+					<div class="form__box form__box--label">
+						<div class="form__box_label">Способ оплаты (выберите сейчас, оплатите позже)</div>
+						<div class="select form__select">
+							<select class="js-select no-search">
+								{% import "data/data.html" as select %}
+
+								{% for item in select.paySelect %}
+								<option value="{{item.option}}">{{item.option}}</option>
+								{% endfor %}
+							</select>
+						</div>
+					</div>
 
 					<div class="policy cart__policy">
 						{{ item.checkbox('Я соглалашаюсь', 'form__checkbox') }}
 						на обработку персональных данных в соответствии с <a href="#" target="_blank">Условиями пользовательского соглашения</a>.
-					</div>	
+					</div>
 
-					<div class="cart__box">
+					<div class="cart__box cart__box--column">
 						<div class="cart__sum">
 							<div class="cart__sum_sale">Сумма скидки: <span>10533,75 руб.</span></div>
 							<div class="cart__sum_current">Итого к оплате: <span>33641,25 руб.</span></div>
@@ -110,13 +123,13 @@ wrapperClass: page-cart
 
 				</form>
 			</div>
-			
+
 		</div>
 		<!-- end cart__wrap -->
 
 	</div>
 
-</main>	
+</main>
 <!-- end home cart -->
 
 {% endblock %}
