--- a/src/templates/partials/_popup.html
+++ b/src/templates/partials/_popup.html
@@ -115,9 +115,10 @@
 							<div class="bz-slider bz-slider--card card__slider">
 								<div class="bz-slider__slides js-bz-slider--card">
 									{% for i in range(0, 4) %}
-									<div itemscope itemtype="https://schema.org/ImageObject">
-										<img class="js-zoom-click" src="img/products/atlas/big/{{i+1}}.png" alt="Атлас дюпон «izumrud»" itemprop="url contentUrl">
-										<meta itemprop="name" content="здесь полное описание вплоть до артикула">
+									<div class="card_container easyzoom easyzoom--overlay easyzom--with-toggle js-easy-zoom">
+										<a class="zoom-in" href="img/products/atlas/zoom/{{i+1}}.png">
+											<img src="img/products/atlas/big/{{i+1}}.png" alt="Атлас дюпон «izumrud»" itemprop="url contentUrl">
+										</a>
 									</div>
 									{% endfor %}
 								</div>
