pay select native

--- a/src/templates/data/data.html
+++ b/src/templates/data/data.html
@@ -1,16 +1,13 @@
 {% set
 	paySelect = [
 	{
-		option: 'Наложенный платеж'
+		option: 'Visa, MasterCard (предоплата 100%)'
 	},
 	{
-		option: 'Яндекс.деньги'
+		option: 'Наложенный платеж ( комиссия 3-10%)'
 	},
 	{
-		option: 'Сбербанк Онлайн'
-	},
-	{
-		option: 'WebMoney'
+		option: 'Оплата на Р/С ( ИП, Юр. лица)'
 	}
 ]
 %}
