--- a/src/sass/components/_select.scss
+++ b/src/sass/components/_select.scss
@@ -1,29 +1,31 @@
 .bz-select {
-	display: inline-block;
-	width: 100%;
-	height: 40px;
-	line-height: 40px;
-	@extend %textLight;
-	font-size: 14px;
-	border: 1px solid #d9d9d9;
-	border-radius: $border-radius;
-	position: relative;
-	&::before {
-		content: "\f107";
-		font-family: faR;
-		@include vy;
-		right: 13px;
-	}
-	@include max-screen(320) {
-		width: 132px;
-	}
-	select {
-		width: 100%;
-		height: 100%;
-		width: 100%;
-		padding: 0 30px 0 15px;
-		border: 0;
-		appearance: none;
+    display: inline-block;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    @extend %textLight;
+    font-size: 14px;
+    border: 1px solid #d9d9d9;
+    border-radius: $border-radius;
+    position: relative;
+    cursor: pointer;
+
+    &::before {
+        content: '\f107';
+        font-family: faR;
+        @include vy;
+        right: 13px;
+    }
+    @include max-screen(320) {
+        width: 132px;
+    }
+
+    select {
+        width: 100%;
+        height: 100%;
+        padding: 0 30px 0 15px;
+        border: 0;
+        appearance: none;
     }
 
     &--native {
@@ -34,35 +36,42 @@
 } //bb-select
 
 .bz-select--dark {
-	.select2-container {
-		min-width: 185px;
-	}
-	.select2-container--default .select2-selection--single {
-		border: 0;
-	}
-	.select2-container--default.select2-container--open.select2-container--below
-		.select2-selection--single,
-	.select2-container--default.select2-container--open.select2-container--below
-		.select2-selection--multiple {
-		border-bottom: 1px solid $color-border--light;
-		box-shadow: 0 7px 12px 0 rgba(0, 0, 0, 0.2);
 
-		.select2-selection__rendered {
-			color: $color-text;
-		}
-		.select2-selection__arrow {
-			b {
-				&::before {
-					color: $color-text;
-				}
-			}
-		}
-	}
-	.select2-container--default
-		.select2-search--dropdown
-		.select2-search__field,
-	.select2-dropdown {
-		color: #fff;
-		border-color: $color-bg--dark;
-	}
+    .select2-container {
+        min-width: 185px;
+    }
+
+    .select2-container--default .select2-selection--single {
+        border: 0;
+    }
+
+    .select2-container--default.select2-container--open.select2-container--below
+    .select2-selection--single,
+    .select2-container--default.select2-container--open.select2-container--below
+    .select2-selection--multiple {
+        border-bottom: 1px solid $color-border--light;
+        box-shadow: 0 7px 12px 0 rgba(0, 0, 0, 0.2);
+
+        .select2-selection__rendered {
+            color: $color-text;
+        }
+
+        .select2-selection__arrow {
+
+            b {
+
+                &::before {
+                    color: $color-text;
+                }
+            }
+        }
+    }
+
+    .select2-container--default
+    .select2-search--dropdown
+    .select2-search__field,
+    .select2-dropdown {
+        color: #fff;
+        border-color: $color-bg--dark;
+    }
 } //.bz-select--dark
